--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
         <div id="stats">
             Ping: -- ms
         </div>
+        <button id="reset-button" disabled>run it back</button>
     </div>
     <script src="game.js"></script>
 </body>
